# Changelog
Alle wesentlichen Änderungen für dieses Projekt werden hier dokumentiert.

Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog].

## [UNRELEASED] -- XXXX-XX-XX

## [12.60.2] -- 2023-05-10
* Update auf SpringBoot 3.0.6.
* KeyText in xtcasUser von 10 auf 50 Zeichen verlängert

## [12.60.1] -- 2023-04-27
* Konfiguration der DataSource SpringBoot überlassen
* Verwaltung der JDBC Connections HikariCP überlassen

## [12.60.0] -- 2023-04-21
* Update auf SpringBoot 3.0.5.
* Korrektur der Connectionfreigabe.
* AuthorizationTest ausbessern (Tabelle leeren, damit andere Tests nicht das Ergebnis beeinflussen)
* `aero_minova_database_` properties entfernen (sind durch `spring.datasource.` abgedeckt)
* Fehlermeldung bei Laden von Privilegien verbessern

## [12.59.1] -- 2023-04-04
* Update auf SpringBoot 3.0.4.

* Feld ModulName in MDI-Maske hinzugefügt.
* Erhöhe Dependency software.amazon.awssdk:bom Version von 2.19.31 auf 2.20.38.
* SQL-Fehlermeldungen ohne Default-Übersetzung verarbeiten
* Connections freigeben nach unsicherem Viewaufruf. Hierdurch soll das Hängenbleiben des CAS verhindert werden.

## [12.59.0] -- 2023-02-07
* #362 Zugriff auf weitere Datenbanken unterstützen (zumindest über Views).
* Property `aero.minova.database.kind` durch `spring.jooq.sql-dialect` ersetzt.
* Proof of Concept Test für SQLViewController#getIndexView
* Kopieren in MDI-Maske ermöglichen, um die Bedienung zu vereinfachen
* Extension-Doku erweitern.
* Prozedur xpcasInsertAllPrivilegesToUserGroup anpassen, sodass immer LastAction 1 beim Neueintragen von Privilegien gesetzt wird.
* CI-Pipeline Updates: `AdoptOpenJDK` wird zu `Eclipse Temurin`.
* Erhöhe Lombok Version von 1.18.24 auf 1.18.26.
* Erhöhe Dependency software.amazon.awssdk:bom Version von 2.19.31 auf 2.19.32.

## [12.58.0] -- 2023-01-27
* Update auf SpringBoot 3.0.2
* S3 Abhängigkeit aus AWS SDK's BOM für Erweiterungen bereitstellen.

## [12.57.2] -- 2023-01-20