@@ -11,6 +11,7 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
 
 import aero.minova.cas.CoreApplicationSystemApplication;
+import aero.minova.cas.service.AuthorizationService;
 import aero.minova.cas.service.model.Authorities;
 import aero.minova.cas.service.model.LuUserPrivilegeUserGroup;
 import aero.minova.cas.service.model.UserGroup;
@@ -26,7 +27,7 @@ import aero.minova.cas.service.repository.UsersRepository;
 class AuthorizationTest {
 
 	@Autowired
-	AuthorizationController controller;
+	AuthorizationService controller;
 
 	@Autowired
 	AuthoritiesRepository authoritiesRepository;
